--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<%- include("partials/header") %> 
 <h1>INDEX PAGE!!!</h1>
 
 <% for(var i = 0; i < blogs.length; i++){ %> 
@@ -8,3 +9,5 @@
         <p><%= blogs[i].body %> </p>
     </div>
 <% } %>
+
+<%- include("partials/footer") %> 
