Update and Delete Added

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,11 +5,15 @@
         <div class="item">
             <img src="<%= blog.image %>" class="ui centered rounded image">
             <div class="content">
-                <span><%= blog.created.toDateString() %> </span>
+                <span><em><%= blog.created.toDateString() %></em></span>
             </div>
             <div>
                 <p><%= blog.body %> </p>
             </div>
+            <a href="/blogs/<%= blog._id %>/edit" class="ui orange basic button">Edit</a>
+            <form action="/blogs/<%= blog._id %>?_method=DELETE" method="post" id="delete">
+                <button class="ui red basic button">Delete</button>
+            </form>
         </div>
     </div>
 </div>
