--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
-        <p>footer</p>
+        <footer>
+            <div class="ui inverted vertical footer segment form-page">
+                <div class="ui container">
+                    Loving yours, Bhanuj❤
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
